clean coded all my projects