@@ -6,13 +6,13 @@ import java.time.LocalDate;
 import java.util.Base64;
 import java.util.List;
 
+import com.whatsapp.image_service.configuration.ImageConfig;
 import com.whatsapp.image_service.models.Image;
 import com.whatsapp.image_service.models.ImageMetadata;
 import com.whatsapp.image_service.repositories.ImageMetadataRepo;
 import com.whatsapp.image_service.repositories.ImageRepo;
 
 import org.apache.commons.io.FileUtils;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
@@ -25,20 +25,24 @@ public class ImageService {
     private final ImageRepo imageRepo;
     private final ImageMetadataRepo imageMetadataRepo;
     private final ImageProcessor imageProcessor;
-    @Value("${image.upload.dir}")
-    private String imagesDirectory;
+    private final ImageConfig imageConfig;
 
     public Image storeImage(MultipartFile file, String userId) {
         imageProcessor.storeImageInDifferentFormats(file, userId);
         return saveImageInDb(file, userId);
     }
     public String findImages(String imageUrl,String userId){
-        byte[] fileContent;
+        
         try {
-            fileContent = FileUtils.readFileToByteArray(new File(imagesDirectory+userId+"/"+ imageUrl));
+            String imageFilePath ="%s%s/%s".formatted(
+                    imageConfig.getImageUploadDir(),
+                    userId,
+                    imageUrl);
+            File imageFile = new File(imageFilePath);
+            byte[] fileContent = FileUtils.readFileToByteArray(imageFile);
             String encodedString = Base64.getEncoder().encodeToString(fileContent);
             String fileType = imageUrl.substring(imageUrl.lastIndexOf("."));
-            return String.format("data:image/%s;base64,%s", fileType, encodedString);
+            return "data:image/%s;base64,%s".formatted(fileType, encodedString);
         } catch (IOException e) {
             e.printStackTrace();
             return null;
